Ticket #28305: Use model in default download name.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -122,6 +122,8 @@ class.com.top_logic.layout.structure.I18NConstants.UPDATE_DIALOG_SIZE = Aktualis
 class.com.top_logic.layout.structure.I18NConstants.UPDATE_LAYOUT_SIZE = Aktualisierung der Layoutgröße
 class.com.top_logic.layout.structure.I18NConstants.UPDATE_MAXIMIZED = Maximiert geändert
 class.com.top_logic.layout.table.export.I18NConstants.COMPONENT_DOWNLOAD_NAME__DATE_TITLE_APP = {0} {1} ({2})
+class.com.top_logic.layout.table.export.I18NConstants.COMPONENT_DOWNLOAD_NAME__DATE_TITLE_APP_MODEL = {0} {1} - {3} ({2})
+class.com.top_logic.layout.table.export.I18NConstants.DEFAULT_EXPORT_NAME = Daten exportieren
 class.com.top_logic.layout.table.export.I18NConstants.DEFAULT_EXPORT_SHEET_NAME = Daten
 class.com.top_logic.layout.table.export.I18NConstants.DOWNLOAD = Herunterladen
 class.com.top_logic.layout.table.export.I18NConstants.DOWNLOAD.tooltip = Generierte Exportdaten herunterladen.
@@ -5660,6 +5662,8 @@ com.top_logic.layout.table.dnd.TableDropTarget.DropType.ROW = Zeile
 com.top_logic.layout.table.dnd.TableDropTarget.DropType.ROW.tooltip = Ein Ablage erfolgt auf eine Zeile selbst, ohne relative Positionierung.
 com.top_logic.layout.table.export.AbstractTableExportHandler = Handler für den Tabellenexport
 com.top_logic.layout.table.export.AbstractTableExportHandler.tooltip = Basisklasse für den Export von <i>Tabellendaten</i>.
+com.top_logic.layout.table.export.ComponentDownloadName = Komponententitel als Download-Name
+com.top_logic.layout.table.export.ComponentDownloadName.tooltip = <i>Berechnung eines Download-Namens</i>, der aus dem Titel der Komponente und der Anwendung abgeleitet wird.
 com.top_logic.layout.table.export.ConstantDownloadName = Konstanter Downloadname
 com.top_logic.layout.table.export.ConstantDownloadName.Config.downloadName = Downloadname
 com.top_logic.layout.table.export.ConstantDownloadName.Config.downloadName.tooltip = Name der Download-Datei.
@@ -5670,7 +5674,7 @@ com.top_logic.layout.table.export.ModelDownloadName = Dateiname (modellbasiert)
 com.top_logic.layout.table.export.ModelDownloadName.Config.downloadNameTemplate = Vorlage für Downloadnamen
 com.top_logic.layout.table.export.ModelDownloadName.Config.downloadNameTemplate.tooltip = Vorlage für den Download-Namen, die einen Platzhalter{0}" enthält, der mit dem Modellnamen gefüllt wird.
 com.top_logic.layout.table.export.ModelDownloadName.Config.model = Modell
-com.top_logic.layout.table.export.ModelDownloadName.Config.model.tooltip = Der <i>Komponenten-Kanal</i> zum Abrufen des Modells, dessen Bezeichnung für den dynamischen Teil des Dateinamens verwendet wird.
+com.top_logic.layout.table.export.ModelDownloadName.Config.model.tooltip = Der <i>Komponenten-Kanal</i> zum Abrufen des Modells, dessen Bezeichnung für den dynamischen Teil des Dateinamens verwendet wird. <p> Ist er nicht gesetzt, wird stattdessen das Zielmodell des Exportbefehls verwendet. Dies ist normalerweise das Modell der zugrunde liegenden Komponente. </p>
 com.top_logic.layout.table.export.ModelDownloadName.tooltip = Die Berechnung <i>des Download-Namens</i> generiert Dateinamen, bei denen die Bezeichnung des konfigurierten Modells übergeben wird, um den Platzhalter '{0}' in res-key zu verwenden.
 com.top_logic.layout.table.export.StreamingExcelExportHandler = Streaming-Excel-Export-Handler
 com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.exportSheetKey = Name des Tabellenblattes
