--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -122,6 +122,8 @@ class.com.top_logic.layout.structure.I18NConstants.UPDATE_DIALOG_SIZE = Update o
 class.com.top_logic.layout.structure.I18NConstants.UPDATE_LAYOUT_SIZE = Update of layout size
 class.com.top_logic.layout.structure.I18NConstants.UPDATE_MAXIMIZED = Maximized changed
 class.com.top_logic.layout.table.export.I18NConstants.COMPONENT_DOWNLOAD_NAME__DATE_TITLE_APP = {0} {1} ({2})
+class.com.top_logic.layout.table.export.I18NConstants.COMPONENT_DOWNLOAD_NAME__DATE_TITLE_APP_MODEL = {0} {1} - {3} ({2})
+class.com.top_logic.layout.table.export.I18NConstants.DEFAULT_EXPORT_NAME = Export data
 class.com.top_logic.layout.table.export.I18NConstants.DEFAULT_EXPORT_SHEET_NAME = Data
 class.com.top_logic.layout.table.export.I18NConstants.DOWNLOAD = Download
 class.com.top_logic.layout.table.export.I18NConstants.DOWNLOAD.tooltip = Download the generated export data.
@@ -5660,6 +5662,8 @@ com.top_logic.layout.table.dnd.TableDropTarget.DropType.ROW = Row
 com.top_logic.layout.table.dnd.TableDropTarget.DropType.ROW.tooltip = A drop occurs to a row itself, without positioning relative to the target row.
 com.top_logic.layout.table.export.AbstractTableExportHandler = Table export handler
 com.top_logic.layout.table.export.AbstractTableExportHandler.tooltip = Base class for <i>table data</i> exports.
+com.top_logic.layout.table.export.ComponentDownloadName = Component download name
+com.top_logic.layout.table.export.ComponentDownloadName.tooltip = <i>Download name provider</i> that creates a download name derived from the component and application title.
 com.top_logic.layout.table.export.ConstantDownloadName = Constant download name
 com.top_logic.layout.table.export.ConstantDownloadName.Config.downloadName = Download name
 com.top_logic.layout.table.export.ConstantDownloadName.Config.downloadName.tooltip = Resource key for the name of the download file.
@@ -5670,7 +5674,7 @@ com.top_logic.layout.table.export.ModelDownloadName = Model download name
 com.top_logic.layout.table.export.ModelDownloadName.Config.downloadNameTemplate = Download name template
 com.top_logic.layout.table.export.ModelDownloadName.Config.downloadNameTemplate.tooltip = Template for the download name containing a placeholder '{0}' that is filled with the model name.
 com.top_logic.layout.table.export.ModelDownloadName.Config.model = Model
-com.top_logic.layout.table.export.ModelDownloadName.Config.model.tooltip = The <i>component channel</i> to get the model whose label is used for the dynamic part of the filename.
+com.top_logic.layout.table.export.ModelDownloadName.Config.model.tooltip = The <i>component channel</i> to get the model whose label is used for the dynamic part of the filename. <p> If not set, the target model of the export command is used instead. This is typically the model of the underlying component. </p>
 com.top_logic.layout.table.export.ModelDownloadName.tooltip = <i>Download name provider</i> generating filenames where the label of the configured model is passed to use in res-key placeholder '{0}'.
 com.top_logic.layout.table.export.StreamingExcelExportHandler = Streaming Excel export handler
 com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.exportSheetKey = Sheet name
