Ticket #28305: Added/fixed/enhanced some excel exports.

--- a/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_en.properties
+++ b/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_en.properties
@@ -299,7 +299,6 @@ admin.sys.memoryObserver.chart.labelX = Time
 admin.sys.memoryObserver.chart.labelY = Bytes
 admin.sys.memoryObserver.chart.title = Memory usage
 admin.sys.memoryObserver.date = Timestamp
-admin.sys.memoryObserver.export.download.name = Memory usage.xls
 admin.sys.memoryObserver.free = Free VM
 admin.sys.memoryObserver.free.tooltip = Memory in MB available to the VM for new object allocations without increasing its heap size.
 admin.sys.memoryObserver.max = Maximum Host
@@ -2745,7 +2744,6 @@ extensions.productAdmin.productLabel = Product:
 extensions.productAdmin.showExtern = extern visible
 extensions.productAdmin.tester = Tester
 extensions.productAdmin.versionLabel = Version:
-external.library.exportFileName = LicenseOverview.xls
 external.library.license = License
 external.library.name = Library name
 external.library.noLicenseFile = No license text available
@@ -3129,7 +3127,7 @@ main.admin.base.tabber.tooltip = Management of program elements that can be used
 main.admin.classification.tabber = Classification
 main.admin.config.logos.tabber = Logos
 main.admin.config.view.tabber = Views
-main.admin.editSecurityProfiles.component.title = Customize access rights
+main.admin.editSecurityProfiles.component.title = Access rights
 main.admin.editSecurityProfiles.component.tree.exportName = Export name
 main.admin.editSecurityProfiles.component.tree.name = Permission
 main.admin.functional.tabber = Func. administration
@@ -4285,7 +4283,7 @@ users.choose.rest.message = The list below displays users not currently assigned
 util.error.displayDialog_errorDialog.title = Reporting a problem
 util.error.displayDialog_exceptionDialog.title = Reporting a problem
 util.maintenance.displayDialog_externalLibs = License overview...
-util.maintenance.displayDialog_externalLibs.title = Overview used software licenses
+util.maintenance.displayDialog_externalLibs.title = Used software libraries
 util.maintenance.groupJava = Java Properties
 util.maintenance.groupLicence = License
 util.maintenance.groupMemory = Memory
