--- a/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_de.properties
+++ b/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_de.properties
@@ -275,7 +275,7 @@ admin.roles.checker.table.allScope = Global Scope
 admin.roles.checker.table.currScope = Local Scope
 admin.roles.checker.table.name = Rolle
 admin.roles.checker.table.title = Rollen
-admin.roles.checker.title = Berechtigungen für Sichten einstellen
+admin.roles.checker.title = Zugriffsberechtigungen
 admin.roles.checker.tree = 
 admin.roles.roles.tabber = Rollen
 admin.roles.table.layoutName = Rollennamen
@@ -299,7 +299,6 @@ admin.sys.memoryObserver.chart.labelX = Zeit
 admin.sys.memoryObserver.chart.labelY = Bytes
 admin.sys.memoryObserver.chart.title = Speicherauslastung
 admin.sys.memoryObserver.date = Zeitpunkt
-admin.sys.memoryObserver.export.download.name = Speicherauslastung.xls
 admin.sys.memoryObserver.free = Verfügbar VM
 admin.sys.memoryObserver.free.tooltip = Speicherplatz in MB der zur Zeit für weitere Objektanlagen zur Verfügung steht, ohne den Heap der VM zu vergrößern.
 admin.sys.memoryObserver.max = Maximum Host
@@ -2745,7 +2744,6 @@ extensions.productAdmin.productLabel = Produkt:
 extensions.productAdmin.showExtern = Extern sichtbar
 extensions.productAdmin.tester = Tester
 extensions.productAdmin.versionLabel = Version:
-external.library.exportFileName = Lizenzübersicht.xls
 external.library.license = Lizenz
 external.library.name = Name der Bibliothek
 external.library.noLicenseFile = Kein Lizenztext verfügbar
@@ -3129,7 +3127,7 @@ main.admin.base.tabber.tooltip = Verwaltung von Programmelementen, die während d
 main.admin.classification.tabber = Klassifikationen
 main.admin.config.logos.tabber = Logos
 main.admin.config.view.tabber = Sichten
-main.admin.editSecurityProfiles.component.title = Berechtigungen für Sichten einstellen
+main.admin.editSecurityProfiles.component.title = Zugriffsberechtigungen
 main.admin.editSecurityProfiles.component.tree.exportName = Export-Name
 main.admin.editSecurityProfiles.component.tree.name = Rechte
 main.admin.functional.tabber = Fach. Administration
@@ -4285,7 +4283,7 @@ users.choose.rest.message = Die untere Liste zeigt alle nicht zugewiesenen Benut
 util.error.displayDialog_errorDialog.title = Meldung eines Problems
 util.error.displayDialog_exceptionDialog.title = Meldung eines Problems
 util.maintenance.displayDialog_externalLibs = Lizenzübersicht...
-util.maintenance.displayDialog_externalLibs.title = Übersicht über verwendete Softwarelizenzen
+util.maintenance.displayDialog_externalLibs.title = Verwendete Softwarekomponenten
 util.maintenance.groupJava = Java Eigenschaften
 util.maintenance.groupLicence = Lizenz
 util.maintenance.groupMemory = Speicher
