--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -123,7 +123,7 @@ class.com.top_logic.layout.structure.I18NConstants.UPDATE_LAYOUT_SIZE = Aktualis
 class.com.top_logic.layout.structure.I18NConstants.UPDATE_MAXIMIZED = Maximiert geändert
 class.com.top_logic.layout.table.export.I18NConstants.COMPONENT_DOWNLOAD_NAME__DATE_TITLE_APP = {0} {1} ({2})
 class.com.top_logic.layout.table.export.I18NConstants.COMPONENT_DOWNLOAD_NAME__DATE_TITLE_APP_MODEL = {0} {1} - {3} ({2})
-class.com.top_logic.layout.table.export.I18NConstants.DEFAULT_EXPORT_NAME = Daten exportieren
+class.com.top_logic.layout.table.export.I18NConstants.DEFAULT_EXPORT_NAME = Tabellendaten
 class.com.top_logic.layout.table.export.I18NConstants.DEFAULT_EXPORT_SHEET_NAME = Daten
 class.com.top_logic.layout.table.export.I18NConstants.DOWNLOAD = Herunterladen
 class.com.top_logic.layout.table.export.I18NConstants.DOWNLOAD.tooltip = Generierte Exportdaten herunterladen.
