--- a/com.top_logic.addons.loginmessages/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.addons.loginmessages/src/main/java/META-INF/messages_de.properties
@@ -3,7 +3,7 @@ com.top_logic.addons.loginmessages.layout.LoginMessageNamingScheme$LoginMessageN
 com.top_logic.addons.loginmessages.layout.LoginMessageNamingScheme.LoginMessageName.name = Name
 com.top_logic.addons.loginmessages.layout.LoginMessageNamingScheme.LoginMessageName.name.tooltip = Namensbeschaffer.
 com.top_logic.addons.loginmessages.layout.LoginMessageResetHandler = Login-Nachrichten-Reset-Handler
-com.top_logic.addons.loginmessages.layout.LoginMessageResetHandler.tooltip = Ein <i>Befehlshandler</i> zum Zurücksetzen der Bestätigung einer <i>Login-Nachricht</i> <i>durch</i> ein <i>Konto</i>.
+com.top_logic.addons.loginmessages.layout.LoginMessageResetHandler.tooltip = <i>Befehl</i>, der den Bestätigungsstatus der ausgewählten Nachricht für alle Konten zurücksetzt. <p> Nach dem Zurücksetzen muss jedes Konto die ausgewählte Anmeldemeldung nach der Anmeldung erneut bestätigen. </p>
 com.top_logic.addons.loginmessages.layout.LoginMessagesMainLayout = Hauptlayout der Login-Nachrichten
 com.top_logic.addons.loginmessages.layout.LoginMessagesMainLayout$GlobalConfig = Globale Konfiguration
 com.top_logic.addons.loginmessages.layout.LoginMessagesMainLayout$GlobalConfig.tooltip = Konfiguration für das <i>Hauptlayout der Anmeldungsnachrichten</i>.
