--- a/com.top_logic.addons.loginmessages/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.addons.loginmessages/src/main/java/META-INF/messages_en.properties
@@ -3,7 +3,7 @@ com.top_logic.addons.loginmessages.layout.LoginMessageNamingScheme$LoginMessageN
 com.top_logic.addons.loginmessages.layout.LoginMessageNamingScheme.LoginMessageName.name = Name
 com.top_logic.addons.loginmessages.layout.LoginMessageNamingScheme.LoginMessageName.name.tooltip = Name getter.
 com.top_logic.addons.loginmessages.layout.LoginMessageResetHandler = Login message reset handler
-com.top_logic.addons.loginmessages.layout.LoginMessageResetHandler.tooltip = A <i>command handler</i> for reseting a <i>account's</i> confirmation of a <i>login message</i>.
+com.top_logic.addons.loginmessages.layout.LoginMessageResetHandler.tooltip = <i>Command</i> that resets the confirmation state of the selected message for all accounts. <p> After a reset, each account must acknowledge the selected login message again after login. </p>
 com.top_logic.addons.loginmessages.layout.LoginMessagesMainLayout = Login messages main layout
 com.top_logic.addons.loginmessages.layout.LoginMessagesMainLayout$GlobalConfig = Global configuration
 com.top_logic.addons.loginmessages.layout.LoginMessagesMainLayout$GlobalConfig.tooltip = Configuration for <i>login messages main layout</i>.
