--- a/com.top_logic.addons.loginmessages/src/main/webapp/WEB-INF/conf/resources/model.LoginMessages.messages_en.properties
+++ b/com.top_logic.addons.loginmessages/src/main/webapp/WEB-INF/conf/resources/model.LoginMessages.messages_en.properties
@@ -1,12 +1,18 @@
 model.LoginMessages = Login messages
 model.LoginMessages.LoginMessage = Login message
 model.LoginMessages.LoginMessage.active = Active
+model.LoginMessages.LoginMessage.active.tooltip = Only an active login message is displayed to a user for confirmation after login. Instead of deleting a login message, it can be made inactive so that it can be reactivated later if required.
 model.LoginMessages.LoginMessage.confirmDuration = Confirmation interval (in days)
-model.LoginMessages.LoginMessage.confirmDuration.tooltip = Empty for single confirmation, 0 for confirmation upon each login, otherwise confirmation interval in days.
+model.LoginMessages.LoginMessage.confirmDuration.tooltip = Interval in days after which a message is displayed to a user again. If no value is specified, this is a one-off confirmation (only displayed once to each user). The value 0 stands for a confirmation that is displayed again after each login.
 model.LoginMessages.LoginMessage.confirmExpirationDate = Confirmation expiration
 model.LoginMessages.LoginMessage.endDate = Valid to
+model.LoginMessages.LoginMessage.endDate.tooltip = Expiration date of the login message. If a date is set, the login message is only displayed if the user's login time is before this date.
 model.LoginMessages.LoginMessage.message = Message
+model.LoginMessages.LoginMessage.message.tooltip = The content of the message to be displayed to a user after login.\ 
 model.LoginMessages.LoginMessage.name = Name
 model.LoginMessages.LoginMessage.startDate = Valid from
+model.LoginMessages.LoginMessage.startDate.tooltip = If a date is set, the login message is only displayed if the user's login time is after this date (not before the date).
 model.LoginMessages.LoginMessage.windowHeight = Window height (px)
+model.LoginMessages.LoginMessage.windowHeight.tooltip = The height of the dialog in which the login message is displayed.
 model.LoginMessages.LoginMessage.windowWidth = Window width (px)
+model.LoginMessages.LoginMessage.windowWidth.tooltip = The width of the dialog in which the login message is displayed.
